--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -5,10 +5,10 @@ on:
   workflow_dispatch:
   push:
     branches: [ main, dev ]
-    paths: src/**
+#     paths: src/**
   pull_request:
     branches: [ main ]
-    paths: src/**
+#     paths: src/**
 
 jobs:
   deploy-to-github-pages:
